--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "prettier": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\""
   },
   "devDependencies": {
+    "@types/react-redux": "^5.0.15",
+    "@types/webpack-env": "^1.13.5",
     "awesome-typescript-loader": "^5.0.0-0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
@@ -15,13 +17,14 @@
     "babel-preset-react": "^6.24.1",
     "html-webpack-plugin": "^3.0.6",
     "prettier": "^1.11.1",
+    "redux-devtools": "^3.4.1",
     "tslint": "^5.9.1",
     "tslint-config-prettier": "^1.9.0",
     "tslint-plugin-prettier": "^1.3.0",
     "typescript": "^2.7.2",
-    "webpack": "^4.1.0",
-    "webpack-cli": "^2.0.10",
-    "webpack-dev-server": "^3.1.0"
+    "webpack": "^4.1.1",
+    "webpack-cli": "^2.0.11",
+    "webpack-dev-server": "^3.1.1"
   },
   "dependencies": {
     "@types/react": "^16.0.40",
@@ -30,6 +33,9 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-hot-loader": "^4.0.0",
-    "react-router-dom": "^4.2.2"
+    "react-redux": "^5.0.7",
+    "react-router-dom": "^4.2.2",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0"
   }
 }
